--- a/M2U2/flexbox1.css
+++ b/M2U2/flexbox1.css
@@ -1,5 +1,7 @@
-.contenedor{
-    background-color: whitesmoke;
+.contenedor{ 
+    border: 1px solid black;
+    margin: 0 auto;
+    background-color: white;
     display: flex;
     align-items: end;
         flex-direction: column;
