--- a/M2U2/flexbox2.css
+++ b/M2U2/flexbox2.css
@@ -1,5 +1,7 @@
 .contenedor{
-    background-color: whitesmoke;
+    border: 1px solid black;
+    margin: 0 auto;
+    background-color: white;
     display: flex;
     align-items: center;
         flex-direction: row-reverse;
