--- a/M3U1/TransportesX/css/transportes.css
+++ b/M3U1/TransportesX/css/transportes.css
@@ -1,17 +1,17 @@
 /* font-family: "Open Sans", sans-serif; */
 
-body{
+body {
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     line-height: 20px;
 }
 
-header{
+header {
     background-color: #2e64a1;
     padding: 16px 0;
 }
 
-header h1{
+header h1 {
     color: white;
     font-size: 40px;
     font-weight: 100;
@@ -20,27 +20,27 @@ header h1{
     position: relative;
     bottom: 35px;
     margin-left: 10px;
-    
+
 }
 
-nav{
+nav {
     background-color: #6da9ed;
     margin-bottom: 20px;
 }
 
-nav ul{
+nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
 }
 
-nav ul li{
+nav ul li {
     flex-grow: 1;
 
 }
 
-nav ul li a{
+nav ul li a {
     color: white;
     text-decoration: none;
     padding: 4px 6px;
@@ -48,11 +48,11 @@ nav ul li a{
     text-align: center;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-footer{
+footer {
     background-color: #ccc;
     clear: both;
     color: #555;
@@ -61,46 +61,48 @@ footer{
     margin-top: 20px;
 }
 
-nav ul li a.activo{
+nav ul li a.activo {
     background-color: #4c76a5;
 }
 
-.holder{
+.holder {
     max-width: 960px;
     margin: 0 auto;
 }
 
-h2{
+/* inicio home */
+
+h2 {
     color: #2e64a1;
     font-weight: 400px;
 }
 
-.bienvenidos{
+.bienvenidos {
     width: 75%;
     padding-right: 10px;
     box-sizing: border-box;
 }
 
-.testimonios{
+.testimonios {
     width: 25%;
     /* background-color: yellow; */
 }
 
-.columnas{
+.columnas {
     display: flex;
     justify-content: space-between;
 }
 
-.bienvenidos p{
+.bienvenidos p {
     font-size: 20px;
 }
 
-.testimonio{
+.testimonio {
     background-color: #ccc;
     padding: 16px;
 }
 
-.testimonio .cita{
+.testimonio .cita {
     font-weight: bold;
     font-style: italic;
     font-size: 22px;
@@ -108,7 +110,7 @@ h2{
     display: block;
 }
 
-.testimonio .autor{
+.testimonio .autor {
     font-size: 10px;
     text-align: center;
     background-color: lightcoral;
@@ -116,16 +118,19 @@ h2{
     margin: 12px 0;
 }
 
-.historia p{
+/* fin home */
+
+/* inicio nosotros */
+.historia p {
     font-size: 12px;
 }
 
-.personas{
+.personas {
     display: flex;
     justify-content: space-between;
 }
 
-.persona{
+.persona {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 18%;
@@ -134,35 +139,39 @@ h2{
     box-sizing: border-box;
 }
 
-.persona img{
+.persona img {
     border-radius: 50%;
     max-width: 60%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .persona h5,
-.persona h6{
+.persona h6 {
     margin: 0;
     font-weight: normal;
     color: #2e64a1;
 }
 
-.persona h5{
+.persona h5 {
     font-size: 14px;
     margin-top: 5px;
 }
 
-.persona h6{
+.persona h6 {
     font-size: 11px;
     font-style: italic;
 }
 
-.persona p{
+.persona p {
     color: #666;
     font-size: 10px;
 }
 
-.servicio{
+/* fin nosotros */
+
+/* inicio servicios */
+
+.servicio {
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 16px;
@@ -172,7 +181,7 @@ h2{
     align-items: center;
 }
 
-.servicio .info h4{
+.servicio .info h4 {
     color: #2e64a1;
     font-weight: 500;
     font-style: italic;
@@ -180,17 +189,104 @@ h2{
     padding-bottom: 10px;
 }
 
-.servicio .info p{
+.servicio .info p {
     font-size: 13px;
     /* line-height: 19px; */
 }
 
-.servicio img{
+.servicio img {
     border-radius: 13px;
     display: block;
-    max-width: 225px;    
+    max-width: 225px;
 }
 
-.servicio:nth-child(even){
+.servicio:nth-child(even) {
     flex-direction: row-reverse;
 }
+
+/* fin servicios */
+
+/* inicio galería */
+
+.galeria {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.galeria img {
+    width: 18%;
+    border: solid #ddd;
+    padding: 0.3em;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    margin-right: 2%;
+}
+
+/* fin galería */
+
+/* inicio contacto */
+
+.contacto {
+    display: flex;
+    gap: 24px;
+}
+
+.contacto div {
+    width: 100%;
+
+}
+
+.datos p {
+    font-size: 14px;
+}
+
+.datos ul li {
+    font-size: 13px;
+}
+
+.formulario p {
+    display: flex;
+}
+
+.formulario p label {
+    min-width: 100px;
+    display: flex;
+    align-items: center;
+}
+
+.formulario p input,
+.formulario p textarea {
+    background: #ddd;
+    border-radius: 5px;
+    border: 1px solid #999;
+    font-size: 14px;
+    padding: 6px 10px;
+}
+
+.formulario textarea {
+    resize: none;
+    height: 150px;
+}
+
+.formulario p:nth-child(4) {
+    align-items: start;
+}
+
+.formulario input[type="submit"] {
+    background: #6da9ed;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    color: white;
+    font-size: 16px;
+    padding: 6px 20px;
+    width: auto;
+    position: relative;
+    left: 5rem;
+    cursor: pointer;
+}
+
+.formulario input[type="submit"]:hover {
+    background-color: #2e64a1;
+}
+
+/* fin contacto *
